se arregla la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="project p3">
           <h3 class="titulo-fotografia">Fotografía</h3>
           <img
-            src="./img/Ilustración/Iglesia-italia.jpg"
+            src="./img/Ilustración/Bird-poses.jpg"
             alt="Seccion de fotografia"
             class="img-fotografia"
           />
