Se arregla la apgina de carga y se agregan elementos de texto a la galeria

--- a/seccion-ilustracion.html
+++ b/seccion-ilustracion.html
@@ -379,9 +379,7 @@
     </nav>
     <h1>Mis Trabajos</h1>
     <div class="loading-screen">
-      <div class="loading-el"></div>
-      <div class="loading-el"></div>
-      <div class="loading-el"></div>
+      <img src="./img/Loading plume.svg" alt="pincel" class="loading-icon" />
     </div>
     <section class="main-gallery">
       <div class="flex-col">
@@ -483,7 +481,18 @@
     </section>
 
     <div class="overlay-gallery hidden">
-      <img src="" alt="" id="gallery-img" />
+      <div class="img-container">
+        <img src="" alt="" id="gallery-img" />
+        <div class="img-desc">
+          <h2 class="img-tittle">Titulo</h2>
+          <p class="img-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At dolorum
+            illo enim saepe explicabo eligendi? Nam, consequatur doloremque.
+            Quas inventore ea molestias alias, magnam laboriosam autem
+            blanditiis accusantium eum ipsum.
+          </p>
+        </div>
+      </div>
       <div class="pagination"></div>
       <svg
         xmlns="http://www.w3.org/2000/svg"
