Se agrega la funcionalidad de parallax de la seccion de fotografia

--- a/html/seccion-fotografia.html
+++ b/html/seccion-fotografia.html
@@ -4,6 +4,185 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesica Peña</title>
+    <script
+      defer
+      type="module"
+      src="../javascript/script-fotografia.js"
+    ></script>
+    <link rel="stylesheet" href="../css/style-general.css" />
+    <link rel="stylesheet" href="../css/style-fotografia.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Roboto:wght@300;400;700&family=Work+Sans:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <nav class="nav-container">
+      <div class="left-nav">
+        <img
+          src="../img/muñequito_pantalla_principal.svg"
+          alt="logo"
+          class="nav-icon"
+        />
+        <h2 class="nav-name">Viviana Peña</h2>
+      </div>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="../index.html">Inicio</a></li>
+        <li class="nav-item">
+          <a href="#">Diseño Gráfico</a>
+        </li>
+        <li class="nav-item">
+          <a href="./seccion-ilustracion.html">Ilustración</a>
+        </li>
+        <li class="nav-item">
+          <a href="./seccion-fotografia.html">Fotografía</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/viviwhimsy.art/"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 256 256"
+              class="nav-logo"
+            >
+              <path
+                d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160ZM176,24H80A56.06,56.06,0,0,0,24,80v96a56.06,56.06,0,0,0,56,56h96a56.06,56.06,0,0,0,56-56V80A56.06,56.06,0,0,0,176,24Zm40,152a40,40,0,0,1-40,40H80a40,40,0,0,1-40-40V80A40,40,0,0,1,80,40h96a40,40,0,0,1,40,40ZM192,76a12,12,0,1,1-12-12A12,12,0,0,1,192,76Z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/jessica-viviana-pe%C3%B1a-pe%C3%B1a-352624203/"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 256 256"
+              class="nav-logo"
+            >
+              <path
+                d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24Zm0,192H40V40H216V216ZM96,112v64a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0Zm88,28v36a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140ZM100,84A12,12,0,1,1,88,72,12,12,0,0,1,100,84Z"
+              ></path></svg
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.behance.net/Viviwhimsyart">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 256 256"
+              class="nav-logo"
+            >
+              <path
+                d="M160,80a8,8,0,0,1,8-8h64a8,8,0,0,1,0,16H168A8,8,0,0,1,160,80Zm-24,78a42,42,0,0,1-42,42H32a8,8,0,0,1-8-8V64a8,8,0,0,1,8-8H90a38,38,0,0,1,25.65,66A42,42,0,0,1,136,158ZM40,116H90a22,22,0,0,0,0-44H40Zm80,42a26,26,0,0,0-26-26H40v52H94A26,26,0,0,0,120,158Zm128-6a8,8,0,0,1-8,8H169a32,32,0,0,0,56.59,11.2,8,8,0,0,1,12.8,9.61A48,48,0,1,1,248,152Zm-17-8a32,32,0,0,0-62,0Z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <main id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+      <img
+        class="image"
+        src="../img/Fotografia/0 Juan Retrato Ventana 2.jpg"
+        alt="Guy Portrait"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/_MG_6821.JPG"
+        alt="Town view"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/_MG_6851.JPG"
+        alt="Parking lot"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/_MG_7207.jpg"
+        alt="Wheel of fortune"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/FONO.jpg"
+        alt="Golden ring"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Foto deportiva.jpg"
+        alt="Boxer"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Foto final.jpg"
+        alt="Cliff"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Foto-final-opcion-2.jpg"
+        alt="Foggy forest"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Globo-Intento-Jessica-Peña.jpg"
+        alt="360 Fish lens"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/MUDDLE-180-1.jpg"
+        alt="Forest Panorama"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/MUDDLE-180-3.jpg"
+        alt="Forest Panorama"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Repetición.jpg"
+        alt="Tin containers"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/RETRATO PICTORIALISTA.jpg"
+        alt="Girl Portrait"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Retrato-#2.jpg"
+        alt="Guy Portrait"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Vertical-1.jpg"
+        alt="Inside of a Church"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/Vertical-2.jpg"
+        alt="Inside of a Church"
+        draggable="false"
+      />
+    </main>
+  </body>
 </html>
