--- a/html/seccion-ilustracion.html
+++ b/html/seccion-ilustracion.html
@@ -40,7 +40,9 @@
         <li class="nav-item">
           <a href="./html/seccion-ilustracion.html">Ilustración</a>
         </li>
-        <li class="nav-item"><a href="#">Fotografía</a></li>
+        <li class="nav-item">
+          <a href="./seccion-fotografia.html">Fotografía</a>
+        </li>
         <li>
           <a href="https://www.instagram.com/viviwhimsy.art/"
             ><svg
