--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <li class="nav-item">
           <a href="./html/seccion-ilustracion.html">Ilustración</a>
         </li>
-        <li class="nav-item"><a href="#">Fotografía</a></li>
+        <li class="nav-item">
+          <a href="./html/seccion-fotografia.html">Fotografía</a>
+        </li>
         <li>
           <a href="#"
             ><svg
