Se realizan ajustes menores de estilo segun lo acordado

--- a/html/seccion-fotografia.html
+++ b/html/seccion-fotografia.html
@@ -167,7 +167,7 @@
       />
       <img
         class="image"
-        src="../img/Fotografia/Retrato-#2.jpg"
+        src="../img/Fotografia/Retrato-2.jpg"
         alt="Guy Portrait"
         draggable="false"
       />
