Se instala Parcel para construir el sitio web

--- a/html/seccion-ilustracion.html
+++ b/html/seccion-ilustracion.html
@@ -38,7 +38,7 @@
           <a href="#">Diseño Gráfico</a>
         </li>
         <li class="nav-item">
-          <a href="./html/seccion-ilustracion.html">Ilustración</a>
+          <a href="#">Ilustración</a>
         </li>
         <li class="nav-item">
           <a href="./seccion-fotografia.html">Fotografía</a>
