--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style-general.css" />
+    <link rel="stylesheet" href="./css/style-general.css" />
     <title>Jesica Peña</title>
-    <script defer src="./javascript/script.js" type="module"></script>
+    <script type="module" src="./javascript/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
