Se implementa el overlay de la seccion de fotografia

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -184,5 +184,38 @@
         draggable="false"
       />
     </main>
+    <div class="gallery-overlay hidden">
+      <div class="img-container">
+        <img alt="" id="gallery-img" />
+      </div>
+      <!-- <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="gallery-arrow left"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.75 19.5L8.25 12l7.5-7.5"
+        />
+      </svg>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="gallery-arrow right"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M8.25 4.5l7.5 7.5-7.5 7.5"
+        />
+      </svg> -->
+    </div>
   </body>
 </html>
