Se implementa la funcion para los textos de la galeria de Ilustracion, se eliminam archios obsoletos

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -115,16 +115,10 @@
           data-index="7"
         />
         <img
-          src="../img/Ilustración/Paisaje-rosa.jpg"
-          alt="Paisaje rosa"
-          class="img-el"
-          data-index="11"
-        />
-        <img
           src="../img/Ilustración/Cables.jpg"
           alt="Cables"
           class="img-el"
-          data-index="14"
+          data-index="11"
         />
       </div>
       <div class="flex-col">
@@ -188,7 +182,7 @@
           src="../img/Ilustración/Portrait-Laura.jpg"
           alt="Retrato"
           class="img-el"
-          data-index="15"
+          data-index="14"
         />
       </div>
     </section>
@@ -197,13 +191,7 @@
       <div class="img-container">
         <img alt="" id="gallery-img" />
         <div class="img-desc">
-          <h2 class="img-tittle">Titulo</h2>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At dolorum
-            illo enim saepe explicabo eligendi? Nam, consequatur doloremque.
-            Quas inventore ea molestias alias, magnam laboriosam autem
-            blanditiis accusantium eum ipsum.
-          </p>
+          <p class="img-text"></p>
         </div>
       </div>
       <div class="pagination"></div>
