Correciones de estilo en la pagina principal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/style-general.css" />
-    <title>Jesica Peña</title>
+    <title>Jessica Peña</title>
     <script type="module" src="./src/javascript/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -142,27 +142,27 @@
       <section class="projects">
         <div class="project p1">
           <h3 class="titulo-diseno">Diseño Gráfico</h3>
-          <img
+          <!-- <img
             src="./src/img/Ilustración/Paisaje-rosa.jpg"
             alt="Seccion de diseño"
             class="img-diseno"
-          />
+          /> -->
         </div>
         <div class="project p2" data-href="./src/html/seccion-ilustracion.html">
           <h3 class="titulo-ilustracion">Ilustración</h3>
-          <img
+          <!-- <img
             src="./src/img/Ilustración/Cables.jpg"
             alt="Seccion de ilustracion"
             class="img-ilustracion"
-          />
+          /> -->
         </div>
         <div class="project p3" data-href="./src/html/seccion-fotografia.html">
           <h3 class="titulo-fotografia">Fotografía</h3>
-          <img
+          <!-- <img
             src="./src/img/Ilustración/Bird-poses.jpg"
             alt="Seccion de fotografia"
             class="img-fotografia"
-          />
+          /> -->
         </div>
       </section>
       <div class="icon">
