--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jesica Peña</title>
+    <title>Jessica Peña</title>
     <script
       defer
       type="module"
