--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-ilustracion.css" />
-    <title>Jesica Peña</title>
+    <title>Jessica Peña</title>
     <script
       defer
       type="module"
