Se agrega la seccion de diseño grafico

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -35,7 +35,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="../../index.html">Inicio</a></li>
         <li class="nav-item">
-          <a href="#">Diseño Gráfico</a>
+          <a href="./seccion-diseno.html">Diseño Gráfico</a>
         </li>
         <li class="nav-item">
           <a href="#">Ilustración</a>
