--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="./index.html">Inicio</a></li>
         <li class="nav-item">
-          <a href="#">Diseño Gráfico</a>
+          <a href="./src/html/seccion-diseno.html">Diseño Gráfico</a>
         </li>
         <li class="nav-item">
           <a href="./src/html/seccion-ilustracion.html">Ilustración</a>
@@ -140,29 +140,14 @@
     </nav>
     <div class="projects-container" id="projects">
       <section class="projects">
-        <div class="project p1">
+        <div class="project p1" data-href="./src/html/seccion-diseno.html">
           <h3 class="titulo-diseno">Diseño Gráfico</h3>
-          <!-- <img
-            src="./src/img/Ilustración/Paisaje-rosa.jpg"
-            alt="Seccion de diseño"
-            class="img-diseno"
-          /> -->
         </div>
         <div class="project p2" data-href="./src/html/seccion-ilustracion.html">
           <h3 class="titulo-ilustracion">Ilustración</h3>
-          <!-- <img
-            src="./src/img/Ilustración/Cables.jpg"
-            alt="Seccion de ilustracion"
-            class="img-ilustracion"
-          /> -->
         </div>
         <div class="project p3" data-href="./src/html/seccion-fotografia.html">
           <h3 class="titulo-fotografia">Fotografía</h3>
-          <!-- <img
-            src="./src/img/Ilustración/Bird-poses.jpg"
-            alt="Seccion de fotografia"
-            class="img-fotografia"
-          /> -->
         </div>
       </section>
       <div class="icon">
