--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -31,7 +31,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a href="../../index.html">Inicio</a></li>
         <li class="nav-item">
-          <a href="#">Diseño Gráfico</a>
+          <a href="./seccion-diseno.html">Diseño Gráfico</a>
         </li>
         <li class="nav-item">
           <a href="./seccion-ilustracion.html">Ilustración</a>
