Se arreglan estilos para esconder los overlays

--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -100,7 +100,7 @@
         </div>
       </div>
     </main>
-    <div class="overlay-diseno hidden">
+    <div class="overlay-diseno hidden-diseno">
       <div class="img-container"></div>
     </div>
   </body>
