Se implementa el favicon en las paginas

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -9,6 +9,7 @@
       type="module"
       src="../javascript/script-fotografia.js"
     ></script>
+    <link rel="icon" href="../img/favicon.ico" />
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-fotografia.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
