--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="./src/javascript/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./src/img/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Roboto:wght@300;400;700&family=Work+Sans:wght@300;400;500&display=swap"
       rel="stylesheet"
