--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-diseno.css" />
     <script defer type="module" src="../javascript/script-diseno.js"></script>
+    <link rel="icon" href="../img/favicon.ico" />
     <title>Jessica Peña</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
