--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -11,6 +11,7 @@
       type="module"
       src="../javascript/script-ilustracion.js"
     ></script>
+    <link rel="icon" href="../img/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
