Se arregla funcionalidad de zoom en la seccion de fotografia

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -219,7 +219,14 @@
     </div>
     <div class="gallery-overlay hidden-photo">
       <div class="img-container">
-        <img alt="" id="gallery-img" />
+        <img
+          alt=""
+          id="gallery-img"
+          data-x-down-at="0"
+          data-prev-x-percentage="0"
+          data-y-down-at="0"
+          data-prev-y-percentage="0"
+        />
       </div>
     </div>
   </body>
