Se actualizan los links de contacto de instragram, se agrega la funcionalidad de que todos los links externos se abrean en una pestaña nueva

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -43,7 +43,10 @@
           <a href="./seccion-ilustracion.html">Ilustración</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/viviwhimsy.art/"
+          <a
+            href="https://www.instagram.com/viviana_.photography"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -60,6 +63,8 @@
         <li>
           <a
             href="https://www.linkedin.com/in/jessica-viviana-pe%C3%B1a-pe%C3%B1a-352624203/"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -73,7 +78,11 @@
           ></a>
         </li>
         <li>
-          <a href="https://www.behance.net/Viviwhimsyart">
+          <a
+            href="https://www.behance.net/Viviwhimsyart"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
