--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -34,7 +34,10 @@
           <a href="./seccion-fotografia.html">Fotografía</a>
         </li>
         <li>
-          <a href="#"
+          <a
+            href="https://www.instagram.com/viviwhimsy.art"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -51,6 +54,8 @@
         <li>
           <a
             href="https://www.linkedin.com/in/jessica-viviana-pe%C3%B1a-pe%C3%B1a-352624203/"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -64,7 +69,11 @@
           ></a>
         </li>
         <li>
-          <a href="https://www.behance.net/Viviwhimsyart">
+          <a
+            href="https://www.behance.net/Viviwhimsyart"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
