--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -42,7 +42,10 @@
           <a href="./seccion-fotografia.html">Fotografía</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/viviwhimsy.art/"
+          <a
+            href="https://www.instagram.com/viviwhimsy.art"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -59,6 +62,8 @@
         <li>
           <a
             href="https://www.linkedin.com/in/jessica-viviana-pe%C3%B1a-pe%C3%B1a-352624203/"
+            target="_blank"
+            rel="noreferrer noopener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -72,7 +77,11 @@
           ></a>
         </li>
         <li>
-          <a href="https://www.behance.net/Viviwhimsyart">
+          <a
+            href="https://www.behance.net/Viviwhimsyart"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
