Se aplican queries para la responsividad de la seccion de inicio y la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/style-general.css" />
+    <link rel="stylesheet" href="./src/css/queries/queries-general.css" />
+    <link rel="stylesheet" href="./src/css/queries/queries-index.css" />
     <title>Jessica Peña</title>
     <script type="module" src="./src/javascript/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +26,7 @@
         />
         <h2 class="nav-name">Viviana Peña</h2>
       </div>
-      <ul class="nav-list">
+      <ul class="nav-list hidden-nav">
         <li class="nav-item"><a href="./index.html">Inicio</a></li>
         <li class="nav-item">
           <a href="./src/html/seccion-diseno.html">Diseño Gráfico</a>
@@ -158,6 +160,20 @@
           </a>
         </li>
       </ul>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="mobile-nav-btn"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+        />
+      </svg>
     </nav>
     <div class="projects-container" id="projects">
       <section class="projects">
