--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-diseno.css" />
+    <link rel="stylesheet" href="../css/queries/queries-general.css" />
     <script defer type="module" src="../javascript/script-diseno.js"></script>
     <link rel="icon" href="../img/favicon.ico" />
     <title>Jessica Peña</title>
@@ -25,7 +26,7 @@
         />
         <h2 class="nav-name">Viviana Peña</h2>
       </div>
-      <ul class="nav-list">
+      <ul class="nav-list hidden-nav">
         <li class="nav-item"><a href="../../index.html">Inicio</a></li>
         <li class="nav-item">
           <a href="./seccion-ilustracion.html">Ilustración</a>
@@ -88,6 +89,20 @@
           </a>
         </li>
       </ul>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="mobile-nav-btn"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+        />
+      </svg>
     </nav>
     <main>
       <div class="container">
