--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="../img/favicon.ico" />
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-fotografia.css" />
+    <link rel="stylesheet" href="../css/queries/queries-general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,7 +35,7 @@
         />
         <h2 class="nav-name">Viviana Peña</h2>
       </div>
-      <ul class="nav-list">
+      <ul class="nav-list hidden-nav">
         <li class="nav-item"><a href="../../index.html">Inicio</a></li>
         <li class="nav-item">
           <a href="./seccion-diseno.html">Diseño Gráfico</a>
@@ -97,6 +98,20 @@
           </a>
         </li>
       </ul>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="mobile-nav-btn"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+        />
+      </svg>
     </nav>
     <main
       id="image-track"
