--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-ilustracion.css" />
+    <link rel="stylesheet" href="../css/queries/queries-general.css" />
     <title>Jessica Peña</title>
     <script
       defer
@@ -33,7 +34,7 @@
         />
         <h2 class="nav-name">Viviana Peña</h2>
       </div>
-      <ul class="nav-list">
+      <ul class="nav-list hidden-nav">
         <li class="nav-item"><a href="../../index.html">Inicio</a></li>
         <li class="nav-item">
           <a href="./seccion-diseno.html">Diseño Gráfico</a>
@@ -96,6 +97,20 @@
           </a>
         </li>
       </ul>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="mobile-nav-btn"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+        />
+      </svg>
     </nav>
     <h1>Mis Trabajos</h1>
     <div class="loading-screen">
