Se agrega el archivo de media queries para responsividad de la seccion de diseño grafico

--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-diseno.css" />
     <link rel="stylesheet" href="../css/queries/queries-general.css" />
+    <link rel="stylesheet" href="../css/queries/queries-diseno.css" />
     <script defer type="module" src="../javascript/script-diseno.js"></script>
     <link rel="icon" href="../img/favicon.ico" />
     <title>Jessica Peña</title>
