--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -121,113 +121,120 @@
     >
       <img
         class="image"
-        src="../img/Fotografia/Foto final.jpg"
-        alt="Cliff"
+        src="../img/Fotografia/0.webp"
+        alt="Bosque Nublado"
         data-index="1"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Foto-final-opcion-2.jpg"
-        alt="Foggy forest"
+        src="../img/Fotografia/1.webp"
+        alt="Foto Panoramica de una parque en Londres"
         data-index="2"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Globo-Intento-Jessica-Peña.jpg"
-        alt="360 Fish lens"
+        src="../img/Fotografia/2.webp"
+        alt="Foto de una montaña en el parque Chicaque"
         data-index="3"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/MUDDLE-180-1.jpg"
-        alt="Forest Panorama"
+        src="../img/Fotografia/3.webp"
+        alt="Foto panoramica de las Piedras del Chivo Negro"
         data-index="4"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/MUDDLE-180-3.jpg"
-        alt="Forest Panorama"
+        src="../img/Fotografia/3_1.webp"
+        alt="Solfie con efecto fisheye 360°"
         data-index="5"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/_MG_6821.jpg"
-        alt="Town view"
+        src="../img/Fotografia/4.webp"
+        alt="Foto del London Eye"
         data-index="6"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/_MG_6851.jpg"
-        alt="Parking lot"
+        src="../img/Fotografia/5.webp"
+        alt="Foto de una iglesia Europea"
         data-index="7"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/_MG_7207.jpg"
-        alt="Wheel of fortune"
+        src="../img/Fotografia/6.webp"
+        alt="Foto interior de una iglesia"
         data-index="8"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Vertical-1.jpg"
-        alt="Inside of a Church"
+        src="../img/Fotografia/7.webp"
+        alt="Foto interior de una iglesia"
         data-index="9"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Vertical-2.jpg"
-        alt="Inside of a Church"
+        src="../img/Fotografia/8.webp"
+        alt="Foto interior de una iglesia"
         data-index="10"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/FONO.jpg"
-        alt="Golden ring"
+        src="../img/Fotografia/9.webp"
+        alt="Anillo de oro"
         data-index="11"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Foto deportiva.jpg"
-        alt="Boxer"
+        src="../img/Fotografia/10.webp"
+        alt="Retrato maquillaje"
         data-index="12"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/RETRATO PICTORIALISTA.jpg"
-        alt="Girl Portrait"
+        src="../img/Fotografia/11.webp"
+        alt="Foto Boxeador"
         data-index="13"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Retrato-2.jpg"
-        alt="Guy Portrait"
+        src="../img/Fotografia/12.webp"
+        alt="Retrato close-up"
         data-index="14"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/0 Juan Retrato Ventana 2.jpg"
-        alt="Guy Portrait"
+        src="../img/Fotografia/12_1.webp"
+        alt="Retrato de una mujer"
         data-index="15"
         draggable="false"
       />
       <img
         class="image"
-        src="../img/Fotografia/Repetición.jpg"
-        alt="Tin containers"
+        src="../img/Fotografia/13.webp"
+        alt="Residencias Londres"
+        data-index="16"
+        draggable="false"
+      />
+      <img
+        class="image"
+        src="../img/Fotografia/14.webp"
+        alt="Parqueadero Londres"
         data-index="16"
         draggable="false"
       />
