Se agregan los queries para responsividad de la seccion de ilustracion y se cambian las imagenes a formato webp para  mejor desempeño

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-ilustracion.css" />
     <link rel="stylesheet" href="../css/queries/queries-general.css" />
+    <link rel="stylesheet" href="../css/queries/queries-ilustracion.css" />
     <title>Jessica Peña</title>
     <script
       defer
@@ -117,94 +118,94 @@
       <img src="../img/Loading plume.svg" alt="pincel" class="loading-icon" />
     </div>
     <section class="main-gallery">
-      <div class="flex-col">
+      <div class="flex-col col1">
         <img
-          src="../img/Ilustración/Diente-de-leon.jpg"
+          src="../img/Ilustración/1.webp"
           alt="Collage diente de leon"
           class="img-el"
           data-index="1"
         />
         <img
-          src="../img/Ilustración/Arbol-con-pasillo.jpg"
+          src="../img/Ilustración/4.webp"
           alt="Arbol Con Pasillo"
           class="img-el"
           data-index="4"
         />
         <img
-          src="../img/Ilustración/Bunny-collage.jpg"
+          src="../img/Ilustración/8.webp"
           alt="Collage de conejo"
           class="img-el"
           data-index="7"
         />
         <img
-          src="../img/Ilustración/Cables.jpg"
+          src="../img/Ilustración/11.webp"
           alt="Cables"
           class="img-el"
-          data-index="11"
+          data-index="13"
         />
       </div>
-      <div class="flex-col">
+      <div class="flex-col col2">
         <img
-          src="../img/Ilustración/Penguin.jpg"
+          src="../img/Ilustración/2.webp"
           alt="Pingüino"
           class="img-el"
           data-index="2"
         />
         <img
-          src="../img/Ilustración/Fox.jpg"
+          src="../img/Ilustración/5.webp"
           alt="Zorro"
           class="img-el"
           data-index="5"
         />
         <img
-          src="../img/Ilustración/Iglesia-italia.jpg"
+          src="../img/Ilustración/9.webp"
           alt="Iglesia Italiana"
           class="img-el"
           data-index="8"
         />
         <img
-          src="../img/Ilustración/Mapache.jpg"
+          src="../img/Ilustración/12.webp"
           alt="Mapache"
           class="img-el"
-          data-index="12"
+          data-index="11"
         />
       </div>
-      <div class="flex-col">
+      <div class="flex-col col3">
         <img
-          src="../img/Ilustración/Tacones.jpg"
+          src="../img/Ilustración/3.webp"
           alt="Tacones"
           class="img-el"
           data-index="3"
         />
         <img
-          src="../img/Ilustración/Cabaña.jpg"
+          src="../img/Ilustración/6.webp"
           alt="Cabaña"
           class="img-el"
           data-index="6"
         />
         <img
-          src="../img/Ilustración/Bird-poses.jpg"
+          src="../img/Ilustración/7.webp"
           alt="Poses de Pajaros"
           class="img-el"
           data-index="9"
         />
         <img
-          src="../img/Ilustración/Retrato-de-familia.jpg"
+          src="../img/Ilustración/10.webp"
           alt="Retrato de familia"
           class="img-el"
           data-index="10"
         />
         <img
-          src="../img/Ilustración/Ilustración_sin_título.png"
+          src="../img/Ilustración/13.webp"
           alt="TBD"
           class="img-el"
-          data-index="13"
+          data-index="14"
         />
         <img
-          src="../img/Ilustración/Portrait-Laura.jpg"
+          src="../img/Ilustración/14.webp"
           alt="Retrato"
           class="img-el"
-          data-index="14"
+          data-index="12"
         />
       </div>
     </section>
