--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -12,6 +12,11 @@
     <script
       defer
       type="module"
+      src="../javascript/script-mobile-nav.js"
+    ></script>
+    <script
+      defer
+      type="module"
       src="../javascript/script-fotografia-overlay.js"
     ></script>
     <link rel="icon" href="../img/favicon.ico" />
@@ -112,6 +117,73 @@
           d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
         />
       </svg>
+      <div class="mobile-nav-overlay hidden-nav-overlay">
+        <ul class="mobile-nav-list">
+          <li class="mobile-nav-item">
+            <a class="mobile-link" href="../../index.html">Inicio</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a class="mobile-link" href="./seccion-ilustracion.html"
+              >Ilustración</a
+            >
+          </li>
+          <li class="mobile-nav-item">
+            <a class="mobile-link" href="./seccion-diseno.html">Diseño</a>
+          </li>
+          <ul class="social">
+            <li>
+              <a href="https://www.instagram.com/viviwhimsy.art">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 256 256"
+                  class="mobile-nav-logo"
+                >
+                  <path
+                    d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160ZM176,24H80A56.06,56.06,0,0,0,24,80v96a56.06,56.06,0,0,0,56,56h96a56.06,56.06,0,0,0,56-56V80A56.06,56.06,0,0,0,176,24Zm40,152a40,40,0,0,1-40,40H80a40,40,0,0,1-40-40V80A40,40,0,0,1,80,40h96a40,40,0,0,1,40,40ZM192,76a12,12,0,1,1-12-12A12,12,0,0,1,192,76Z"
+                  ></path></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/jessica-viviana-pe%C3%B1a-pe%C3%B1a-352624203/"
+                target="_blank"
+                rel="noreferrer noopener"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 256 256"
+                  class="mobile-nav-logo"
+                >
+                  <path
+                    d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24Zm0,192H40V40H216V216ZM96,112v64a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0Zm88,28v36a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140ZM100,84A12,12,0,1,1,88,72,12,12,0,0,1,100,84Z"
+                  ></path></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.behance.net/Viviwhimsyart"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 256 256"
+                  class="mobile-nav-logo"
+                >
+                  <path
+                    d="M160,80a8,8,0,0,1,8-8h64a8,8,0,0,1,0,16H168A8,8,0,0,1,160,80Zm-24,78a42,42,0,0,1-42,42H32a8,8,0,0,1-8-8V64a8,8,0,0,1,8-8H90a38,38,0,0,1,25.65,66A42,42,0,0,1,136,158ZM40,116H90a22,22,0,0,0,0-44H40Zm80,42a26,26,0,0,0-26-26H40v52H94A26,26,0,0,0,120,158Zm128-6a8,8,0,0,1-8,8H169a32,32,0,0,0,56.59,11.2,8,8,0,0,1,12.8,9.61A48,48,0,1,1,248,152Zm-17-8a32,32,0,0,0-62,0Z"
+                  ></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </ul>
+      </div>
     </nav>
     <main
       id="image-track"
