--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -123,7 +123,9 @@
             <a class="mobile-link" href="../../index.html">Inicio</a>
           </li>
           <li class="mobile-nav-item">
-            <a class="mobile-link" href="./seccion-diseno.html">Diseño</a>
+            <a class="mobile-link" href="./seccion-diseno.html"
+              >Diseño Gráfico</a
+            >
           </li>
           <li class="mobile-nav-item">
             <a class="mobile-link" href="./seccion-fotografia.html"
@@ -183,6 +185,18 @@
             </li>
           </ul>
         </ul>
+        <svg
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="close-mobile"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          />
+        </svg>
       </div>
     </nav>
     <h1>Mis Trabajos</h1>
