Se corrigen errores de posicionamiento en la seccion de fotografia

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -199,132 +199,134 @@
         </svg>
       </div>
     </nav>
-    <main
-      id="image-track"
-      data-mouse-down-at="0"
-      data-prev-percentage="0"
-      data-percentage="0"
-    >
-      <img
-        class="image"
-        src="../img/Fotografia/0.webp"
-        alt="Bosque Nublado"
-        data-index="1"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/1.webp"
-        alt="Foto Panoramica de una parque en Londres"
-        data-index="2"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/2.webp"
-        alt="Foto de una montaña en el parque Chicaque"
-        data-index="3"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/3.webp"
-        alt="Foto panoramica de las Piedras del Chivo Negro"
-        data-index="4"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/3_1.webp"
-        alt="Solfie con efecto fisheye 360°"
-        data-index="5"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/4.webp"
-        alt="Foto del London Eye"
-        data-index="6"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/5.webp"
-        alt="Foto de una iglesia Europea"
-        data-index="7"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/6.webp"
-        alt="Foto interior de una iglesia"
-        data-index="8"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/7.webp"
-        alt="Foto interior de una iglesia"
-        data-index="9"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/8.webp"
-        alt="Foto interior de una iglesia"
-        data-index="10"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/9.webp"
-        alt="Anillo de oro"
-        data-index="11"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/10.webp"
-        alt="Retrato maquillaje"
-        data-index="12"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/11.webp"
-        alt="Foto Boxeador"
-        data-index="13"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/12.webp"
-        alt="Retrato close-up"
-        data-index="14"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/12_1.webp"
-        alt="Retrato de una mujer"
-        data-index="15"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/13.webp"
-        alt="Residencias Londres"
-        data-index="16"
-        draggable="false"
-      />
-      <img
-        class="image"
-        src="../img/Fotografia/14.webp"
-        alt="Parqueadero Londres"
-        data-index="17"
-        draggable="false"
-      />
-    </main>
+    <div class="track-container">
+      <main
+        id="image-track"
+        data-mouse-down-at="0"
+        data-prev-percentage="0"
+        data-percentage="0"
+      >
+        <img
+          class="image"
+          src="../img/Fotografia/0.webp"
+          alt="Bosque Nublado"
+          data-index="1"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/1.webp"
+          alt="Foto Panoramica de una parque en Londres"
+          data-index="2"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/2.webp"
+          alt="Foto de una montaña en el parque Chicaque"
+          data-index="3"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/3.webp"
+          alt="Foto panoramica de las Piedras del Chivo Negro"
+          data-index="4"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/3_1.webp"
+          alt="Solfie con efecto fisheye 360°"
+          data-index="5"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/4.webp"
+          alt="Foto del London Eye"
+          data-index="6"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/5.webp"
+          alt="Foto de una iglesia Europea"
+          data-index="7"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/6.webp"
+          alt="Foto interior de una iglesia"
+          data-index="8"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/7.webp"
+          alt="Foto interior de una iglesia"
+          data-index="9"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/8.webp"
+          alt="Foto interior de una iglesia"
+          data-index="10"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/9.webp"
+          alt="Anillo de oro"
+          data-index="11"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/10.webp"
+          alt="Retrato maquillaje"
+          data-index="12"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/11.webp"
+          alt="Foto Boxeador"
+          data-index="13"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/12.webp"
+          alt="Retrato close-up"
+          data-index="14"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/12_1.webp"
+          alt="Retrato de una mujer"
+          data-index="15"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/13.webp"
+          alt="Residencias Londres"
+          data-index="16"
+          draggable="false"
+        />
+        <img
+          class="image"
+          src="../img/Fotografia/14.webp"
+          alt="Parqueadero Londres"
+          data-index="17"
+          draggable="false"
+        />
+      </main>
+    </div>
     <div class="buttons">
       <svg
         fill="none"
