Se implementan los queries para la responsividad de la seccion de fotografia

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="../css/style-general.css" />
     <link rel="stylesheet" href="../css/style-fotografia.css" />
     <link rel="stylesheet" href="../css/queries/queries-general.css" />
+    <link rel="stylesheet" href="../css/queries/queries-fotografia.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
